--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.1.2",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.11",
     "mysql2": "^1.6.1",
     "sequelize": "^4.38.1"
