--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "extend": "^3.0.2",
     "handlebars": "^4.1.2",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.11",
