--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "test",
+    "password": "test2",
     "database": "idioms_db",
     "host": "localhost",
     "dialect": "mysql",
@@ -11,7 +11,7 @@
   },
   "test": {
     "username": "root",
-    "password": "test",
+    "password": "test2",
     "database": "idioms_db",
     "host": "localhost",
     "dialect": "mysql",
