--- a/config/CopyOfconfig.json
+++ b/config/CopyOfconfig.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "****",
+    "password": "password",
     "database": "idioms_db",
     "host": "localhost",
     "dialect": "mysql",
@@ -11,7 +11,7 @@
   },
   "test": {
     "username": "root",
-    "password": "****",
+    "password": "password",
     "database": "idioms_db",
     "host": "localhost",
     "dialect": "mysql",
@@ -20,5 +20,10 @@
   "production": {
     "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
+  },
+  "information about this file":{
+    "change-1": "change file name to config.json",
+    "change-2": "update passwords",
+    "change-3": "you can delete 'information about this file' part :)"
   }
 }
